--- a/style/style.css
+++ b/style/style.css
@@ -1,1 +1,262 @@
+*{
+   margin: 0px;
+   font-family: 'Open Sans', sans-serif;
+}
+section{
+   margin-top: 130px;
+}
+/* heder and navigation style */
+header{
+   background:#fff8f3;
+   background-image: url('../images/banner.jpg');
+   background-repeat: no-repeat;
+   background-position: bottom right;
+   margin-top: -44px;
+   background-size: 100%;
+}
+nav{
+   display:flex;
+   justify-content: space-between;
+   padding:51px 200px;
+  
+}
+.nav_title{
+   font-weight: 800;
+   font-size: 30px;
+   color: #ffffff;
  
+   /* margin-left: 260px; */
+}
+.text-primary{
+   color:#ff5200
+}
+.btn-primary{
+   background-color: #FD6E0A;
+   color:#ffffff;
+   border-radius: 6px;;
+   height:64px;
+   font-size: 20px;
+   font-weight: 700;
+   border:none;
+   padding: 18px 30px;
+
+}
+.outline-btn-primary{
+   color:#FD6E0A;
+   border-radius: 5px;;
+   height:64px;
+   font-size: 20px;
+   font-weight: 700;
+   border:2px solid #FD6E0A;
+   padding: 20px 25px;
+   background:none
+}
+
+nav ul{
+display:flex; 
+margin-left: 50px;
+align-items: center;
+color: #ffffff;
+}
+nav ul li{
+   list-style: none;
+   margin-left:20px;
+   background: ;
+}
+
+
+/* banner style */
+.banner{
+   display: flex;
+   align-items: center;
+   margin: 0 200px;
+   color:#ffffff
+   
+}
+
+.banner-title{
+   font-weight: 700;
+   font-size: 65px;
+   
+}
+.banner-sub-title{
+   font-weight: 600;
+   font-size: 45px;
+   margin-bottom: 20px;
+   
+
+}
+.banner-description{
+   color:#f3cfcf;
+   font-size: 18px;
+   margin-bottom: 30px;
+   
+}
+.banner img{
+   margin-bottom:0px;
+   margin-right:-200px;
+   width:2000px;
+
+}
+.banner button{
+   margin-bottom:60px
+}
+
+/* main section */
+main{
+   max-width: 1040px;
+   margin: 0 auto;
+}
+/* about Me style now */
+.about-me{
+   
+   background:#fff8f3;
+   border-radius: 10px;
+   padding: 130px 150px;
+   text-align: center;
+
+}
+.about-title{
+
+   margin-bottom:40px;
+   font-weight: 800;
+   font-size: 35px;
+}
+.about-description{
+   text-align: center;
+   color:#757575
+}
+.about-info-contner{
+   display: flex;
+   justify-content: space-around;
+   margin-top: 50px;
+}
+.about-info{
+
+}
+.about-info p{
+   font-size: 20px;
+   color: #757575;
+   margin-bottom: 10px;
+
+}
+.about-info h5{
+   font-weight: 700;
+   font-size: 20;
+}
+
+/* My skill in programing style */
+
+.my-skill-title{
+   font-weight: 700;
+   font-size: 35px;
+   text-align:center;
+   margin:30px 0px
+}
+.my-skill-description{
+   font-size: 20px;
+   color: #757575;
+   margin-bottom: 10px;
+   padding: 0 40px;
+   text-align:center
+
+}
+/* my skill style section  */
+.skills-container{
+   display: flex;
+   gap: 24px;
+   margin-top: 40px;
+   margin-bottom: 40px;
+   padding: 10px;
+}
+
+.skill-title{
+   font-size: 20px;
+   font-weight: 700;
+   margin-top: 30px;
+   margin-bottom: 25px;
+}
+.skill{
+   background: white;
+   box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+   border-radius: 5px;
+   padding: 30px;
+   /* text-align: center; */
+   
+}
+.skill img{
+   margin-left:37%;
+   cursor:pointer
+}
+.skill-description{
+   color:#757575;
+   
+}
+/* A summary of My Resume Style */
+
+.resume-contener{
+   display: flex;
+   gap:20px;
+   padding: 10px;
+}
+.resume-title{
+   text-align: center;
+   margin-top: 40px;
+   margin-bottom: 40px;
+   font-size: 36px;
+}
+.education-itame{
+   border-bottom: 1px solid #757575;
+   margin-bottom: 20px;
+   padding-right: 20px;
+   
+}
+.my-education-title{
+   font-size:25px ;
+   font-weight: 700;
+   margin-top: 10px;
+   margin-bottom: 20px
+}
+.education-itame-title{
+   margin-bottom: 10px
+}
+.education-itame-subtitle{
+   color:#757575;
+   margin-bottom: 30px;
+}
+.education-itame-description{
+   margin-bottom: 40px;
+}
+.resume-button{
+   margin-bottom: 40px;
+   margin-top: 50px;
+   text-align: center;
+}
+
+
+/* contact style */
+.contact{
+   display: flex;
+   gap: 100px;
+   background: #fff8f3;
+   padding: 130px 200px;
+}
+.contact .section-title{
+   text-align: left;
+}
+.contact input[type="text"], input[type="email"], textarea{
+   margin-bottom:24px;
+   border: 0;
+   width: 100%;
+   padding:18px  30px;
+}
+.contact a{
+   text-decoration: none;
+   margin-left: 20px;
+   font-weight: 800;
+   font-size: 40px;
+}
+.contact-description{
+   color: #757575;
+   margin: 30px 0;
+}
